<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F5F6"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingLeft="30dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_paste_black_24dp" />


            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:weightSum="1">


                <TextView
                    android:id="@+id/textView105"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/buy_recom_text"
                    android:textColor="#217B5A"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/textView1005"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="เพราะจะทำให้ผู้ซื้อตัดสินใจได้ง่ายขึ้น"
                    android:textColor="#217B5A"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                style="@style/spinner_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/type_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner56"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:entries="@array/country_arrays"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                style="@style/spinner_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView102"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/price_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="132dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/bath_kilo_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                style="@style/spinner_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"

                    android:text="@string/weight_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="132dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15.5dp"
                    android:ems="10"
                    android:inputType="textPersonName"

                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/kilo_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                style="@style/spinner_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/descrip_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="15dp"
                    android:ems="1000"
                    android:inputType="textPersonName"

                    android:textSize="15sp" />


            </LinearLayout>
            <TextView
                android:id="@+id/textView336"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="ระบุพื้นที่สินค้า"
                android:textColor="#000000"
                android:textSize="14sp" />

            <LinearLayout
                style="@style/spinner_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView335"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/province_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner20"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:entries="@array/country_arrays"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                style="@style/spinner_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/phone_text"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText312"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="15sp" />


            </LinearLayout>


            <Button
                android:id="@+id/button"
                style="@style/btn_green"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="31dp"
                android:layout_marginBottom="30dp"
                android:text="@string/sell_text" />



        </LinearLayout>
    </LinearLayout>
</ScrollView>