<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reterntozero.var2.MyGoodsActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#F3F5F6"
        android:fitsSystemWindows="true"
        android:paddingTop="2dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                style="@style/btn_white_mygood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="14dp">

                    <TextView
                        android:id="@+id/textView3305"
                        style="@style/green_text"
                        android:gravity="center"
                        android:layout_width="70dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"

                        android:text="พลาสติก" />

                    <TextView
                        android:id="@+id/textView02043"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="|" />

                    <TextView
                        android:id="@+id/textView0203"
                        style="@style/green_light_text"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginLeft="10dp"
                        android:text="PET ใสสะอาด" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal">

                    <LinearLayout

                        style="@style/num_design"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView570"
                            style="@style/black_num_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_text" />

                        <TextView
                            android:id="@+id/textView58007"
                            style="@style/green_num_text"
                            android:text="3" />

                        <TextView
                            android:id="@+id/textView5900"
                            style="@style/black_num_under_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/kilo_text" />


                    </LinearLayout>

                    <LinearLayout

                        style="@style/num_design"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView581500"
                            style="@style/black_num_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_text" />

                        <TextView
                            android:id="@+id/textView580104"
                            style="@style/green_num_text"
                            android:text="13" />

                        <TextView
                            android:id="@+id/textView570160"
                            style="@style/black_num_under_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/bath_kilo_text" />

                    </LinearLayout>

                    <LinearLayout

                        style="@style/num_design"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView51800"
                            style="@style/black_num_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ราคารสุทธิ" />

                        <TextView
                            android:id="@+id/textView50104"
                            style="@style/green_num_text"
                            android:text="39" />

                        <TextView
                            android:id="@+id/textView50160"
                            style="@style/black_num_under_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/bath_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView501054"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="Suphasek"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/textView500174"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="สาทร กรุงเทพมหานคร"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
